# tunapond

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  submission_server.ts
migrations/: 20230907191505_create-database.sql  20230919003832_add_zeroes_column.sql
src/: address.rs  common.rs  main.rs  signature_verifier.rs
src/model/: datum_submission.rs  miner.rs  mining_session.rs  mod.rs  payouts.rs  payouts_due.rs  proof_of_work.rs
src/routes/: common.rs  deregister.rs  hashrate.rs  mod.rs  register.rs  submit.rs  work.rs
src/service/: block.rs  mining_session.rs  mod.rs  payment.rs  proof_of_work.rs  submission.rs
