[package]
name = "tunapond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
cardano-multiplatform-lib = "3.1.3"
reqwest = { version = "0.11.20", features=["json"]}
cardano-message-signing = "1.0.1"
hex = "0.4.3"
chrono = { version = "0.4.30", features = ["serde"] }
tokio = "1.32.0"
